# GitHub-Analytics

./: README.md  docker-compose.yml  nx.json  package.json  pnpm-lock.yaml
apps/backend/: .env.dist  project.json  pyproject.toml
apps/backend/data/langchain-ai/langchain/: chart.ts
apps/backend/notebooks/: test.ipynb
apps/backend/src/: __init__.py  main.py
apps/backend/src/queries/: Github.graphql
apps/backend/src/routes/: main.py
apps/backend/src/routes/v1/: analytics.py  main.py
apps/backend/src/services/agents/: analyst.py  base.py  developer.py  graph.py  planner.py  supervisor.py  tools.py  types.py
apps/backend/src/services/gql/: base_client.py  client.py  enums.py  input_types.py
apps/backend/src/utils/: config.py
apps/backend/src/validation/: api.py
apps/backend/tests/: test_hello.py
apps/frontend/: project.json  tailwind.config.js  tsconfig.app.json
apps/frontend/public/charts/langchain-ai/langchain/: data.json
apps/frontend/src/app/: app.tsx
apps/frontend/src/app/charts/langchain-ai/langchain/: chart.tsx  data.json
apps/frontend/src/app/pages/: Charts.tsx
apps/frontend/src/components/: AnalyticsForm.tsx  AnalyticsResult.tsx  Navigation.tsx
apps/frontend/src/types/: index.ts
apps/frontend/src/utils/: markdownStyles.ts
